--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.18.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
