--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,6 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.7.2"
+    "less": "^4.1.2",
+    "vite": "^2.7.2",
+    "vite-plugin-imp": "^2.1.2"
   }
 }
