--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -21,13 +22,9 @@
     "less": "^4.1.2",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "vite": "^2.7.2",
     "vite-plugin-imp": "^2.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
