--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "less": "^4.1.2",
     "lint-staged": "^12.1.4",
