--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -44,5 +45,8 @@
       "eslint --cache --fix",
       "git add"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
