--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "less": "^4.1.2",
     "lint-staged": "^12.1.4",
