--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "typescript": "^4.5.4",
     "vite": "^2.7.2",
     "vite-plugin-imp": "^2.1.2"
   },
