--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
