add browserslist config to customize browsers we want to support: https://juejin.cn/post/6844903669524086797

--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
   },
   "resolutions": {
     "styled-components": "^5"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
