--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@types/styled-components": "^5.1.20",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
