--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@types/styled-components": "^5.1.20",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "styled-components": "^5.3.3"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -50,9 +48,6 @@
       "eslint --cache --fix",
       "git add"
     ]
-  },
-  "resolutions": {
-    "styled-components": "^5"
   },
   "browserslist": [
     "last 2 Chrome version",
